--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 bcrypt==4.1.3
 beautifulsoup4==4.12.3
 blinker==1.8.2
+boto3==1.34.144
+botocore==1.34.144
 certifi==2024.6.2
 cffi==1.16.0
 charset-normalizer==3.3.2
@@ -16,6 +18,7 @@ idna==3.7
 importlib_metadata==7.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
+jmespath==1.0.1
 jwcrypto==1.5.6
 MarkupSafe==2.1.5
 oauth2client==4.1.3
@@ -27,10 +30,12 @@ pycparser==2.22
 pycryptodome==3.20.0
 pyparsing==3.1.2
 Pyrebase4==4.8.0
+python-dateutil==2.9.0.post0
 python-jwt==4.1.0
 requests==2.32.3
 requests-toolbelt==0.10.1
 rsa==4.9
+s3transfer==0.10.2
 six==1.16.0
 soupsieve==2.5
 typing_extensions==4.12.2
